create about-section in HTML and CSS style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Luxury Hotel</title>
     <link rel="icon" href="/assets/images/hotel-5-star-img.jpeg">
     <link rel="stylesheet" href="/css/hero-section.css">
+    <link rel="stylesheet" href="/css/about-hotel-section.css">
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
         rel="stylesheet" 
@@ -95,9 +96,43 @@
                 <a href="#" class="btn btn-primary">Book Now</a>
             </div>
         </section>
+        <!-- //////////////////////////////////////////// -->
+        <section class="about-hotel-section" id="about-hotel">
+          <div class="card mb-3" style="max-width: 1000px; margin: auto;">
+            <div class="row g-0">
+              <div class="col-md-5">
+                <img src="/assets/images/hotel-img-1.jpg" class="img-fluid rounded-start" alt="hotel-img-1" style="height: 100%; object-fit: cover;">
+              </div>
+              <div class="col-md-7">
+                <div class="card-body">
+                  <h5 class="card-title">About Luxury Hotel</h5>
+                  <p class="card-text">
+                    Nestled in the heart of the city, Luxury Hotel is your gateway to elegance and tranquility. 
+                    With stunning architecture, world-class amenities, and unmatched hospitality, we ensure that every guest feels like royalty.
+                  </p>
+                  <p class="card-text">
+                    From the moment you walk through our doors, you'll be embraced by warm smiles, calming interiors, and an ambiance that whispers luxury. 
+                    Each room is a masterpiece—blending modern comfort with timeless design, offering spectacular views, plush bedding, and personalized services.
+                  </p>
+                  <p class="card-text">
+                    <strong>Whether you're here for business, leisure, or a romantic escape, Luxury Hotel offers curated experiences—gourmet cuisine, a tranquil spa, and a rooftop pool—all wrapped in sophistication and unforgettable moments.</strong>
+                  </p>                  
+                  
+                  <ul>
+                    <li>🏨 200+ luxury rooms and suites</li>
+                    <li>🍽️ Fine dining with international cuisines</li>
+                    <li>💆 Full-service spa and wellness center</li>
+                    <li>🏊 Rooftop pool with skyline view</li>
+                    <li>🛎️ 24/7 room service and concierge</li>
+                  </ul>
+                  <p class="card-text"><small class="text-body-secondary">Last updated: April 2025</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
-    </main>
-
+        
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
