feat: embed Google Map for Luxury Hotel in 'Find Us' section

--- a/index.html
+++ b/index.html
@@ -133,6 +133,22 @@
           </div>
         </section>
 
+        <!-- adding google map location using it embedded link -->
+        <section id="map-section" class="main-page-section text-center py-5">
+          <h2 class="text-center mb-4">Find Us</h2>
+          <div class="w-100 ratio ratio-16x9 rounded-3 shadow">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.6879849918428!2d80.20497827324645!3d6.037484293948122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae1739679cea25b%3A0x4edf49e4cc9048a0!2sIJSE%20-%20Institute%20of%20Software%20Engineering%20(Galle%20Branch)!5e0!3m2!1sen!2slk!4v1744517825100!5m2!1sen!2slk"
+              class="w-100"
+              height="450"
+              style="border:0;"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </section>
+
         <!-- Contact Section -->
         <section id="contact" class="contact-section">
               <div class="container">
