--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/hero-section.css">
     <link rel="stylesheet" href="/css/about-hotel-section.css">
     <link rel="stylesheet" href="/css/contact-section.css">
+    <link rel="stylesheet" href="/css/rooms-section.css">
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
         rel="stylesheet" 
@@ -143,7 +144,7 @@
               <!-- Deluxe Room -->
               <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                  <img src="https://via.placeholder.com/400x250" class="card-img-top" alt="Deluxe Room">
+                  <img src="/assets/images/deluxe-room-img-1.jpg" class="card-img-top" alt="Deluxe Room">
                   <div class="card-body">
                     <h5 class="card-title">Deluxe Room</h5>
                     <p class="card-text">A cozy room with all modern amenities perfect for solo travelers or couples.</p>
@@ -155,7 +156,7 @@
               <!-- Executive Suite -->
               <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                  <img src="https://via.placeholder.com/400x250" class="card-img-top" alt="Executive Suite">
+                  <img src="/assets/images/executive-suite-img-1.jpeg" class="card-img-top" alt="Executive Suite">
                   <div class="card-body">
                     <h5 class="card-title">Executive Suite</h5>
                     <p class="card-text">Spacious suite designed for business travelers with a separate living area.</p>
@@ -167,7 +168,7 @@
               <!-- Presidential Suite -->
               <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                  <img src="https://via.placeholder.com/400x250" class="card-img-top" alt="Presidential Suite">
+                  <img src="/assets/images/presidential-suite-img-1.jpg" class="card-img-top" alt="Presidential Suite">
                   <div class="card-body">
                     <h5 class="card-title">Presidential Suite</h5>
                     <p class="card-text">Our most luxurious suite with premium features and stunning views.</p>
