create deluxe-room HTML file and navigate this to correct path

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                       Rooms & Suites
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Deluxe Room</a></li>
+                      <li><a class="dropdown-item" href="/pages/deluxe-room.html">Deluxe Room</a></li>
                       <li><a class="dropdown-item" href="#">Executive Suite</a></li>
                       <li><a class="dropdown-item" href="#">Presidential Suite</a></li>
                     </ul>
@@ -148,7 +148,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Deluxe Room</h5>
                     <p class="card-text">A cozy room with all modern amenities perfect for solo travelers or couples.</p>
-                    <a href="#" class="btn btn-outline-primary">View More</a>
+                    <a href="/pages/deluxe-room.html" class="btn btn-outline-primary">View More</a>
                   </div>
                 </div>
               </div>
