--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/about-hotel-section.css">
     <link rel="stylesheet" href="/css/contact-section.css">
     <link rel="stylesheet" href="/css/rooms-section.css">
+    <link rel="stylesheet" href="/css/pages-css/deluxe-room.css">
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
         rel="stylesheet" 
