--- a/pages/deluxe-room.html
+++ b/pages/deluxe-room.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Experience luxury in our Deluxe Room featuring premium amenities and stunning views. Book your perfect stay today.">
   <title>Deluxe Room | Luxury Accommodation | Ocean View Hotel</title>
+  <link rel="icon" href="/assets/images/hotel-5-star-img.jpeg">
 
+  <link rel="stylesheet" href="/css/pages-css/deluxe-room.css">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <!-- Font Awesome -->
