create executive-room HTML file and navigate this to correct path

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="/pages/deluxe-room.html">Deluxe Room</a></li>
-                      <li><a class="dropdown-item" href="#">Executive Suite</a></li>
+                      <li><a class="dropdown-item" href="/pages/executive-suite.html">Executive Suite</a></li>
                       <li><a class="dropdown-item" href="#">Presidential Suite</a></li>
                     </ul>
                   </li>
@@ -145,7 +145,7 @@
               <!-- Deluxe Room -->
               <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                  <img src="/assets/images/deluxe-room-img-1.jpg" class="card-img-top" alt="Deluxe Room">
+                  <img src="/assets/images/deluxe-room-img-3.jpg" class="card-img-top" alt="Deluxe Room">
                   <div class="card-body">
                     <h5 class="card-title">Deluxe Room</h5>
                     <p class="card-text">A cozy room with all modern amenities perfect for solo travelers or couples.</p>
@@ -161,7 +161,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Executive Suite</h5>
                     <p class="card-text">Spacious suite designed for business travelers with a separate living area.</p>
-                    <a href="#" class="btn btn-outline-primary">View More</a>
+                    <a href="/pages/executive-suite.html" class="btn btn-outline-primary">View More</a>
                   </div>
                 </div>
               </div>
@@ -169,7 +169,7 @@
               <!-- Presidential Suite -->
               <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                  <img src="/assets/images/presidential-suite-img-1.jpg" class="card-img-top" alt="Presidential Suite">
+                  <img src="/assets/images/presidential-suite-img-3.jpeg" class="card-img-top" alt="Presidential Suite">
                   <div class="card-body">
                     <h5 class="card-title">Presidential Suite</h5>
                     <p class="card-text">Our most luxurious suite with premium features and stunning views.</p>
