--- a/pages/executive-suite.html
+++ b/pages/executive-suite.html
@@ -114,34 +114,34 @@
       </div>
     </section>
 
-    <!-- Gallery Section -->
-    <section class="gallery pb-5">
-      <div class="container">
-        <h3 class="section-title text-center mb-5">Suite Gallery</h3>
-        <div class="row g-4">
-          <div class="col-md-3 col-6">
-            <img src="https://images.unsplash.com/photo-1584622650111-993a426fbf0a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80" 
-                 class="img-fluid img-load" 
-                 alt="Executive Workspace">
-          </div>
-          <div class="col-md-3 col-6">
-            <img src="https://images.unsplash.com/photo-1556741536508-86c9d1d158d1?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80" 
-                 class="img-fluid img-load" 
-                 alt="Meeting Area">
-          </div>
-          <div class="col-md-3 col-6">
-            <img src="https://images.unsplash.com/photo-1585694243034-29e118d7b8ac?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80" 
-                 class="img-fluid img-load" 
-                 alt="Bedroom">
-          </div>
-          <div class="col-md-3 col-6">
-            <img src="https://images.unsplash.com/photo-1581389375278-52a75db34b03?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80" 
-                 class="img-fluid img-load" 
-                 alt="Bathroom">
+    <section class="gallery pb-5 pt-5">
+        <div class="container">
+          <h3 class="section-title text-center mb-5">Suite Gallery</h3>
+          <div class="row g-4">
+            <div class="col-md-3 col-6">
+              <img src="https://images.unsplash.com/photo-1584622650111-993a426fbf0a?auto=format&fit=crop&w=800&q=80"
+                   class="img-fluid img-load"
+                   alt="Executive Workspace">
+            </div>
+            <div class="col-md-3 col-6">
+              <img src="https://images.unsplash.com/photo-1556741536508-86c9d1d158d1?auto=format&fit=crop&w=800&q=80"
+                   class="img-fluid img-load"
+                   alt="Meeting Area">
+            </div>
+            <div class="col-md-3 col-6">
+              <img src="https://images.unsplash.com/photo-1585694243034-29e118d7b8ac?auto=format&fit=crop&w=800&q=80"
+                   class="img-fluid img-load"
+                   alt="Bedroom">
+            </div>
+            <div class="col-md-3 col-6">
+              <img src="https://images.unsplash.com/photo-1581389375278-52a75db34b03?auto=format&fit=crop&w=800&q=80"
+                   class="img-fluid img-load"
+                   alt="Bathroom">
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+      
 
     <!-- Booking CTA -->
     <section class="booking-cta">
@@ -191,7 +191,7 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Custom Animations -->
-  <script>
+  <!-- <script>
     // Scroll Progress Indicator
     window.addEventListener('scroll', () => {
       const scrollProgress = document.querySelector('.scroll-progress');
@@ -207,6 +207,6 @@
         img.style.animationDelay = Math.random() * 300 + 'ms';
       });
     });
-  </script>
+  </script> -->
 </body>
 </html>
