--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/rooms-section.css">
     <link rel="stylesheet" href="/css/pages-css/deluxe-room.css">
     <link rel="stylesheet" href="/css/pages-css/executive-suite.css">
+    <link rel="stylesheet" href="/pages/presidential-suite.html">
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
         rel="stylesheet" 
@@ -48,7 +49,7 @@
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="/pages/deluxe-room.html">Deluxe Room</a></li>
                       <li><a class="dropdown-item" href="/pages/executive-suite.html">Executive Suite</a></li>
-                      <li><a class="dropdown-item" href="#">Presidential Suite</a></li>
+                      <li><a class="dropdown-item" href="/pages/presidential-suite.html">Presidential Suite</a></li>
                     </ul>
                   </li>
                   <!-- Dining Dropdown -->
@@ -174,7 +175,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Presidential Suite</h5>
                     <p class="card-text">Our most luxurious suite with premium features and stunning views.</p>
-                    <a href="#" class="btn btn-outline-primary">View More</a>
+                    <a href="/pages/presidential-suite.html" class="btn btn-outline-primary">View More</a>
                   </div>
                 </div>
               </div>
