--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="icon" href="/assets/images/hotel-5-star-img.jpeg">
     
     <link rel="stylesheet" href="/css/about-hotel-section.css">
-    <link rel="stylesheet" href="/css/contact-section.css">
+
     <link rel="stylesheet" href="/css/rooms-section.css">
     <link rel="stylesheet" href="/css/pages-css/deluxe-room.css">
     <link rel="stylesheet" href="/css/pages-css/executive-suite.css">
     <link rel="stylesheet" href="/pages/presidential-suite.html">
 
     <link rel="stylesheet" href="/css/hero-section.css">
+    <link rel="stylesheet" href="/css/contact-section.css">
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
         rel="stylesheet" 
@@ -185,6 +186,52 @@
           </div>
         </section>
         
+        <!-- dining section-->
+        <section id="dining" class="main-page-section py-5 bg-light">
+          <div class="container text-center">
+            <h2 class="mb-3">Dining</h2>
+            <p class="mb-5 text-muted">Enjoy gourmet experiences with our diverse dining options tailored to satisfy every palate.</p>
+
+            <div class="row g-4">
+              <!-- Restaurant -->
+              <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                  <img src="/assets/images/restaurant.jpg" class="card-img-top" alt="Restaurant">
+                  <div class="card-body">
+                    <h5 class="card-title">Restaurant</h5>
+                    <p class="card-text">Savor international cuisine prepared by world-class chefs in a fine dining atmosphere.</p>
+                    <a href="/pages/restaurant.html" class="btn btn-outline-primary">View More</a>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Bar & Lounge -->
+              <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                  <img src="/assets/images/bar-lounge.jpg" class="card-img-top" alt="Bar & Lounge">
+                  <div class="card-body">
+                    <h5 class="card-title">Bar & Lounge</h5>
+                    <p class="card-text">Unwind with signature cocktails and live music in our elegant lounge setting.</p>
+                    <a href="/pages/bar-lounge.html" class="btn btn-outline-primary">View More</a>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Room Service -->
+              <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                  <img src="/assets/images/room-service.jpg" class="card-img-top" alt="Room Service">
+                  <div class="card-body">
+                    <h5 class="card-title">Room Service</h5>
+                    <p class="card-text">Indulge in delicious meals from the comfort of your room, any time of day.</p>
+                    <a href="/pages/room-service.html" class="btn btn-outline-primary">View More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
 
         <!-- adding google map location using it embedded link -->
         <section id="map-section" class="main-page-section text-center py-5">
@@ -205,7 +252,7 @@
         <!-- Contact Section -->
         <section id="contact" class="contact-section">
               <div class="container">
-                <h2 class="section-title">Contact Us</h2>
+                <h2 class="contact-section-title">Contact Us</h2>
                 <div class="row align-items-center">
                   <!-- Left Image Column -->
                   <div class="col-md-6 mb-4 mb-md-0">
