added spa section to index page

--- a/index.html
+++ b/index.html
@@ -232,6 +232,51 @@
           </div>
         </section>
 
+        <!-- spa section-->
+        <section id="spa" class="main-page-section py-5 bg-light">
+          <div class="container text-center">
+            <h2 class="mb-3">Spa & Wellness</h2>
+            <p class="mb-5 text-muted">Rejuvenate your mind, body, and soul with our premium spa services and wellness packages.</p>
+
+            <div class="row g-4">
+              <!-- Spa Treatment -->
+              <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                  <img src="/assets/images/spa-treatment.jpg" class="card-img-top" alt="Spa Treatment">
+                  <div class="card-body">
+                    <h5 class="card-title">Spa Treatment</h5>
+                    <p class="card-text">Experience relaxing massages, facials, and body treatments tailored just for you.</p>
+                    <a href="/pages/spa-treatment.html" class="btn btn-outline-primary">View More</a>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Wellness Packages -->
+              <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                  <img src="/assets/images/wellness-packages.jpg" class="card-img-top" alt="Wellness Packages">
+                  <div class="card-body">
+                    <h5 class="card-title">Wellness Packages</h5>
+                    <p class="card-text">Choose from our holistic wellness packages designed for your ultimate well-being.</p>
+                    <a href="/pages/wellness-packages.html" class="btn btn-outline-primary">View More</a>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Book an Appointment -->
+              <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                  <img src="/assets/images/book-appointment.jpg" class="card-img-top" alt="Book an Appointment">
+                  <div class="card-body">
+                    <h5 class="card-title">Book an Appointment</h5>
+                    <p class="card-text">Reserve your personalized spa experience with ease at your preferred time.</p>
+                    <a href="/pages/book-appointment.html" class="btn btn-outline-primary">Book Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
         <!-- adding google map location using it embedded link -->
         <section id="map-section" class="main-page-section text-center py-5">
