update rooms pages html,index.html and contact CSS

--- a/pages/presidential-suite.html
+++ b/pages/presidential-suite.html
@@ -150,7 +150,6 @@
     </section>
   </main>
 
-  <!-- Footer (same as above, you can reuse it) -->
   <footer class="bg-dark text-white py-4">
     <div class="container">
       <div class="row">
@@ -167,6 +166,9 @@
             <a href="#" class="text-white me-3"><i class="fab fa-facebook"></i></a>
             <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
             <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
+            <a href="https://wa.me/your-number" class="text-white me-3" target="_blank">
+                <i class="fab fa-whatsapp"></i>
+            </a>
           </div>
         </div>
         <div class="col-md-4">
