--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="/css/hero-section.css">
     <link rel="stylesheet" href="/css/contact-section.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
         rel="stylesheet" 
@@ -340,7 +341,14 @@
                   </div>
                   <div class="col-md-4">
                       <h4>Follow Us</h4>
-                      <!-- Add social media links -->
+                      <div class="social-links">
+                        <a href="#" class="text-white me-3"><i class="fab fa-facebook"></i></a>
+                        <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
+                        <a href="https://wa.me/your-number" class="text-white me-3" target="_blank">
+                          <i class="fab fa-whatsapp"></i>
+                        </a>
+                      </div>
                   </div>
                   <div class="col-md-4">
                       <h4>Newsletter</h4>
