--- a/pages/executive-suite.html
+++ b/pages/executive-suite.html
@@ -172,6 +172,9 @@
             <a href="#" class="text-white me-3"><i class="fab fa-facebook"></i></a>
             <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
             <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
+            <a href="https://wa.me/your-number" class="text-white me-3" target="_blank">
+                <i class="fab fa-whatsapp"></i>
+            </a>
           </div>
         </div>
         <div class="col-md-4">
