Replaced Room Section inside Dining Section with Poolside Dining

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="#">Restaurant</a></li>
                       <li><a class="dropdown-item" href="#">Bar & Lounge</a></li>
-                      <li><a class="dropdown-item" href="#">Room Service</a></li>
+                      <li><a class="dropdown-item" href="#rooms">Room Service</a></li>
                     </ul>
                   </li>
                   <!-- Spa Dropdown -->
@@ -218,14 +218,14 @@
                 </div>
               </div>
 
-              <!-- Room Service -->
+              <!-- Poolside Dining -->
               <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                  <img src="/assets/images/room-service.jpg" class="card-img-top" alt="Room Service">
+                  <img src="/assets/images/poolside-dining.jpg" class="card-img-top" alt="Poolside Dining">
                   <div class="card-body">
-                    <h5 class="card-title">Room Service</h5>
-                    <p class="card-text">Indulge in delicious meals from the comfort of your room, any time of day.</p>
-                    <a href="/pages/room-service.html" class="btn btn-outline-primary">View More</a>
+                    <h5 class="card-title">Poolside Dining</h5>
+                    <p class="card-text">Relax by the pool with refreshing drinks and light meals served throughout the day.</p>
+                    <a href="/pages/poolside-dining.html" class="btn btn-outline-primary">View More</a>
                   </div>
                 </div>
               </div>
