--- a/pages/restaurant.html
+++ b/pages/restaurant.html
@@ -6,7 +6,7 @@
     <title>The Signature Restaurant | Fine Dining Experience</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    
+    <link rel="stylesheet" href="/css/pages-css/restaurant.css">
 </head>
 <body>
     <!-- Hero Section -->
