--- a/pages/wellness-packages.html
+++ b/pages/wellness-packages.html
@@ -6,23 +6,7 @@
     <title>Holistic Wellness Packages | Complete Rejuvenation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <style>
-        .wellness-hero {
-            background:     
-                        linear-gradient(
-                            rgba(0, 0, 0, 0.5), 
-                            rgba(0, 0, 0, 0.5)), 
-                            url('/assets/images/lounge-hero.jpg');
-            height: 60vh;
-        }
-        .package-card {
-            border: 2px solid #e9ecef;
-            transition: all 0.3s;
-        }
-        .package-card:hover {
-            border-color: #0d6efd;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/pages-css/wellness-packages.css">
 </head>
 <body>
     <!-- Hero Section -->
@@ -103,7 +87,7 @@
     <footer class="bg-dark text-white py-4">
         <div class="container text-center">
             <p>Wellness Consultants Available Daily</p>
-            <a href="/spa.html" class="btn btn-outline-light">Back to Spa</a>
+            <a href="/index.html#spa" class="btn btn-outline-light">Back to Spa</a>
         </div>
     </footer>
 </body>
