--- a/pages/book-appointment.html
+++ b/pages/book-appointment.html
@@ -92,12 +92,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        document.getElementById('spaBookingForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            new bootstrap.Modal(document.getElementById('bookingConfirmation')).show();
-            this.reset();
-        });
-    </script>
+    <script src="/js/book-appointment.js"></script>
 </body>
 </html>
