--- a/pages/executive-suite.html
+++ b/pages/executive-suite.html
@@ -119,22 +119,22 @@
           <h3 class="section-title text-center mb-5">Suite Gallery</h3>
           <div class="row g-4">
             <div class="col-md-3 col-6">
-              <img src="https://images.unsplash.com/photo-1584622650111-993a426fbf0a?auto=format&fit=crop&w=800&q=80"
+              <img src="/assets/images/executive-workspace-img.jpg"
                    class="img-fluid img-load"
                    alt="Executive Workspace">
             </div>
             <div class="col-md-3 col-6">
-              <img src="https://images.unsplash.com/photo-1556741536508-86c9d1d158d1?auto=format&fit=crop&w=800&q=80"
+              <img src="/assets/images/meeting-area-img.jpg"
                    class="img-fluid img-load"
                    alt="Meeting Area">
             </div>
             <div class="col-md-3 col-6">
-              <img src="https://images.unsplash.com/photo-1585694243034-29e118d7b8ac?auto=format&fit=crop&w=800&q=80"
+              <img src="/assets/images/bedroom-img.jpg"
                    class="img-fluid img-load"
                    alt="Bedroom">
             </div>
             <div class="col-md-3 col-6">
-              <img src="https://images.unsplash.com/photo-1581389375278-52a75db34b03?auto=format&fit=crop&w=800&q=80"
+              <img src="/assets/images/bathroom-img.jpg"
                    class="img-fluid img-load"
                    alt="Bathroom">
             </div>
