--- a/pages/poolside-dining.html
+++ b/pages/poolside-dining.html
@@ -25,7 +25,7 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="card pool-card h-100">
-                        <img src="https://images.unsplash.com/photo-1505253758473-96b7015fcd8b" class="card-img-top" alt="Light Bites">
+                        <img src="/assets/images/light-bites-img.jpg" class="card-img-top" alt="Light Bites">
                         <div class="card-body">
                             <h5 class="card-title"><i class="fas fa-umbrella-beach"></i> Light Bites</h5>
                             <ul class="list-unstyled">
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img src="https://images.unsplash.com/photo-1518607692855-0d9060a1da0a" alt="Sunset Dining" class="img-fluid rounded shadow">
+                    <img src="/assets/images/sunset-dining-img-1.jpg" alt="Sunset Dining" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-md-6">
                     <h3>Sunset Dining Experience</h3>
