--- a/pages/presidential-suite.html
+++ b/pages/presidential-suite.html
@@ -42,7 +42,7 @@
         <h2 class="section-title text-center">Royal Amenities</h2>
         <div class="row align-items-center mb-5">
           <div class="col-lg-6 mb-4 img-load">
-            <img src="https://images.unsplash.com/photo-1590490360188-04124ec10748?auto=format&fit=crop&w=1920&q=80"
+            <img src="/assets/images/Presidential-living-room-img.jpg"
                  alt="Presidential Living Room"
                  class="img-fluid rounded-3 shadow-lg">
           </div>
@@ -115,22 +115,22 @@
         <h3 class="section-title text-center mb-5">Gallery</h3>
         <div class="row g-4">
           <div class="col-md-3 col-6">
-            <img src="https://images.unsplash.com/photo-1600585153899-90c15c71b3f2?auto=format&fit=crop&w=800&q=80"
+            <img src="/assets/images/living-area-img.jpg"
                  class="img-fluid img-load"
                  alt="Living Area">
           </div>
           <div class="col-md-3 col-6">
-            <img src="https://images.unsplash.com/photo-1593191817873-4df37b44d5a3?auto=format&fit=crop&w=800&q=80"
+            <img src="/assets/images/spa-bathroom-img.jpg"
                  class="img-fluid img-load"
                  alt="Spa Bathroom">
           </div>
           <div class="col-md-3 col-6">
-            <img src="https://images.unsplash.com/photo-1600047508183-bd119d2a5d22?auto=format&fit=crop&w=800&q=80"
+            <img src="/assets/images/bedroom-img-2.jpg"
                  class="img-fluid img-load"
                  alt="Bedroom">
           </div>
           <div class="col-md-3 col-6">
-            <img src="https://images.unsplash.com/photo-1632070443799-99d2197e50d9?auto=format&fit=crop&w=800&q=80"
+            <img src="/assets/images/entertainment-setup-img.jpg"
                  class="img-fluid img-load"
                  alt="Entertainment Setup">
           </div>
