--- a/pages/restaurant.html
+++ b/pages/restaurant.html
@@ -25,7 +25,7 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="card menu-card h-100">
-                        <img src="/assets/images/appetizers.jpg" class="card-img-top" alt="Appetizers">
+                        <img src="/assets/images/appetizer-img.jpg" class="card-img-top" alt="Appetizers">
                         <div class="card-body">
                             <h5 class="card-title">Starters</h5>
                             <ul class="list-unstyled">
@@ -39,7 +39,7 @@
 
                 <div class="col-md-4">
                     <div class="card menu-card h-100">
-                        <img src="/assets/images/main-course.jpg" class="card-img-top" alt="Main Courses">
+                        <img src="/assets/images/main-course-img.jpg" class="card-img-top" alt="Main Courses">
                         <div class="card-body">
                             <h5 class="card-title">Main Courses</h5>
                             <ul class="list-unstyled">
@@ -53,7 +53,7 @@
 
                 <div class="col-md-4">
                     <div class="card menu-card h-100">
-                        <img src="/assets/images/desserts.jpg" class="card-img-top" alt="Desserts">
+                        <img src="/assets/images/desserts-img.jpg" class="card-img-top" alt="Desserts">
                         <div class="card-body">
                             <h5 class="card-title">Sweet Finales</h5>
                             <ul class="list-unstyled">
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img src="/assets/images/chef-special.jpg" alt="Chef's Special" class="img-fluid rounded">
+                    <img src="/assets/images/chef-spesial-img-2.jpg" alt="Chef's Special" class="img-fluid rounded">
                 </div>
                 <div class="col-md-6">
                     <h3>Chef's Table Experience</h3>
