--- a/pages/spa-treatment.html
+++ b/pages/spa-treatment.html
@@ -25,7 +25,7 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="card treatment-card h-100">
-                        <img src="/assets/images/massage.jpg" class="card-img-top" alt="Massage Therapies">
+                        <img src="/assets/images/massage-img.jpg" class="card-img-top" alt="Massage Therapies">
                         <div class="card-body">
                             <h5 class="card-title"><i class="fas fa-spa text-primary"></i> Massage Therapies</h5>
                             <ul class="list-unstyled">
@@ -44,7 +44,7 @@
 
                 <div class="col-md-4">
                     <div class="card treatment-card h-100">
-                        <img src="/assets/images/facial.jpg" class="card-img-top" alt="Facial Treatments">
+                        <img src="/assets/images/facial-img.jpg" class="card-img-top" alt="Facial Treatments">
                         <div class="card-body">
                             <h5 class="card-title"><i class="fas fa-leaf text-primary"></i> Facial Treatments</h5>
                             <ul class="list-unstyled">
@@ -63,7 +63,7 @@
 
                 <div class="col-md-4">
                     <div class="card treatment-card h-100">
-                        <img src="/assets/images/body-treatment.jpg" class="card-img-top" alt="Body Treatments">
+                        <img src="/assets/images/body-treatment-img.jpg" class="card-img-top" alt="Body Treatments">
                         <div class="card-body">
                             <h5 class="card-title"><i class="fas fa-water text-primary"></i> Body Rituals</h5>
                             <ul class="list-unstyled">
