--- a/pages/deluxe-room.html
+++ b/pages/deluxe-room.html
@@ -279,6 +279,7 @@ function calculateExecutiveDiscount(days) {
     return basePrice * days;
 }
   </script> -->
+  <script src="/js/deluxe-room.js"></script>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
